# ros_video_recorder

./: CMakeLists.txt  LICENSE  README.md  package.xml
launch/: gazebo_camera.launch  video_recorder.launch
scripts/: VideoRecorder.py
srv/: StartRecording.srv  StopRecording.srv
urdf/: camera.xacro
