<?xml version="1.0"?>
<package format="2">
  <name>ros_video_recorder</name>
  <version>1.0.0</version>
  <description>A simple video recorder for image streams</description>

  <maintainer email="janfelixklein@googlemail.com">Jan-Felix Klein</maintainer>
  <author email="janfelixklein@googlemail.com">Jan-Felix Klein</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>cv_bridge</depend>

</package>
